k8s/documents-mongo-node-srv.yaml
apiVersion: v1
kind: Service
metadata:
    name: documents-mongo-node-srv
spec:
    type: NodePort
    selector:
        app: documents-mongo
    ports:
        - name: documents-mongo
          protocol: TCP
          port: 27018
          targetPort: 27017
