k8s/operations-mongo-node-srv.yaml
apiVersion: v1
kind: Service
metadata:
    name: operations-mongo-node-srv
spec:
    type: NodePort
    selector:
        app: operations-mongo
    ports:
        - name: operations-mongo
          protocol: TCP
          port: 27017
          targetPort: 27017
