k8s/operations-srv.yaml
apiVersion: v1
kind: Service
metadata:
    name: operations-srv
spec:
    type: NodePort
    selector:
        app: operations
    ports:
        - name: operations
          protocol: TCP
          port: 3000
          targetPort: 3000
